--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "may1reboot globe header module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "prestart": "npm install",
+    "start": "gulp live",
+    "start-old-node": "npx -p node@8.6.0 npm start"
   },
   "repository": {
     "type": "git",
@@ -32,12 +34,12 @@
     "gulp-shell": "^0.5.0",
     "gulp-template": "^3.1.0",
     "gulp-uglify": "^1.5.3",
+    "live-server": "^0.9.2",
     "main-bower-files": "^2.9.0",
     "morgan": "^1.6.1",
     "precss": "^1.2.3",
     "run-sequence": "^1.1.4",
-    "surge": "^0.16.0",
-    "live-server": "^0.9.2"
+    "surge": "^0.16.0"
   },
   "dependencies": {
     "gulp-include": "^2.0.3",
